org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-06-01
	- better links section (upper right) including "browse" hyperlink
	- history tokens dispatched: #<ontology-uri>   #browse
	- close window: warning message only shown when in editing mode
	- various other code changes
	- TODO: check filtered out ontologies when administrator is logged in
	
	
2009-05-31
	- Many changes for including editing and creation of new version of a vocabulary ontology
	  TODO: once registered the new version, the browse page is displayed with a reloading of
	  the list of all ontologies. However, the hyperlink for the newly created version does not
	  resolve immediately; it seems the history token is added but the notification does not happen
	  immediately?
	  
	- Filtering out ontologies with authority "mmitest" and "testing"; these are included only when
	  an adminsitrator is logged in.
	  
	- Quick adjustments to the "New" options (Vocabulary, Mapping, Uplaod) to at least launch the 
	  not-yet-integrated mechanisms.
	
	
2009-05-28
	- continuing preparations for editing vocabulary
	- view only vocabulary table now created incrementally (especially useful for large tables, eg., CF)
	- Started implementation of Edit with VocabClassPanel/TermTable. In general, this shows 2 major limitations:
		- slow for big vocabularies
		- fixed column width
	  So, perhaps:
	  	- Disable in-place editing of the table (instead, include a direct import from a local file and process
	  	  the CSV in the back-end for checking, and then update view-only-table for visual feed-back
		- or, allow in-place editing but only for small vocabularies (say with no more than a couple hundred terms);
		  direct the user to the import mechanism above in case of bigger vocabs.		
			
2009-05-27
	- Unifying interface; menuBar set-up depending on interface type; new controller PortalController
	  to improve MVC design.  Better general layout.
	 