@@ -3,15 +3,15 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>OntMd</title>
+    <title>MMI Ontology Registry and Repository</title>
     <script type="text/javascript" language="javascript" src="org.mmisw.ontmd.gwt.Main.nocache.js"></script>
   </head>
 
   <body>
   
-  <div id="loading"><img src="images/loading.gif">Loading...</div>
+  <div id="loading" align="center"><img src="images/loading.gif">Loading...</div>
   
-  <!-- iframe src="javascript:''"  id="__gwt_historyFrame"  style="width:0;height:0;border:0"></iframe -->
+  <iframe src="javascript:''"  id="__gwt_historyFrame"  style="width:0;height:0;border:0"></iframe>
                 
   </body>
 </html>
